# patina-apps

./: .gitignore  Cargo.toml  Makefile.toml  README.md  codecov.yml  cspell.yml  deny.toml  rust-toolchain.toml
.github/workflows/: ci-workflow.yml  crate-version-update.yml  label-issues.yml  label-sync.yml  triage-issues.yml  update-release-draft.yml
docs/services_benchmark_test/: benchmarks.md
services_benchmark_test/: Cargo.toml
services_benchmark_test/resources/: NoopImage.efi
services_benchmark_test/src/: bench.rs  error.rs  lib.rs  main.rs  measure.rs
services_benchmark_test/src/bench/: controller.rs  event.rs  image.rs  memory.rs  misc.rs  protocol.rs  tpl.rs
